# rpg-game

./: .gitignore  CMakeLists.txt  README.md  info.txt  main  main.cpp  map.json
headers/: battle.hpp  map.hpp  npc.hpp  npc_data.hpp  player.hpp  story_mira.hpp  utils.hpp
src/: battle.cpp  main.cpp  map.cpp  npc.cpp  player.cpp  story_mira.cpp
